--- a/cov_19_cnn_web/templates/index.html
+++ b/cov_19_cnn_web/templates/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-  <title>COV-CNN</title>
+  <title>COV19-CNN</title>
   <head>
   {% load static %}
     <link rel="icon" href="../static/header.png" type="image/x-icon">
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="{% static 'indexstyle.css' %}">
   </head>
   <body>
-    <h1 style="font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; font-size: 50px; padding-top: 10px;">COV-CNN</h1>
+    <h1 style="font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; font-size: 50px; padding-top: 10px;">COVID-19 Detector</h1>
     <p style="font-family: 'Gill   Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; font-size: 20px; word-spacing: 4px; letter-spacing:0.5em;">CNN Based Detection of COVID from Chest X-Ray</p>
     <div class="row py-4">
       <div class="col-lg-6 mx-auto">
