--- a/cov_19_cnn_web/templates/index.html
+++ b/cov_19_cnn_web/templates/index.html
@@ -15,7 +15,7 @@
       <div class="col-lg-6 mx-auto">
           <form method="post" id="imageForm" enctype="multipart/form-data" style="width:50%; margin:25px auto;">
             {% csrf_token %}
-            <label for="ImgFile" style="font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; font-size: 20px">Upload Image</label>
+            <label for="ImgFile" style="font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; font-size: 20px">Upload Image Here</label>
               <input type="file" name="ImgFile" class="form-control" style="background:transparent; height:50px;" />
               <input type="submit" id="submitButton" class="btn btn-primary btn-center mt-3" name="submit" value="Solve" style="width: 120px; text-align:center" />
           </form>
